--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,58 @@
-.content {
-    display: grid;
-    height: 400px;
-    width: 100%;
-    align-items: center;
-    justify-items: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+body {
+    font-family: "Poppins", sans-serif;
 }
+
+section {
+    padding: 60px 0;
+    overflow: hidden;
+    position: relative;
+}
+
+/* Navbar */
+.navbar-dark,
+.navbar-light {
+    transition: ease-in-out 0.5s;
+}
+.navbar {
+    animation: 1s ease-out 0s 1 slideInLeft;
+    z-index: 999;
+    position: fixed;
+    width: 100%;
+}
+.navbar .navbar-brand label:first-child {
+    color: var(--bs-orange) !important;
+    font-size: 21px;
+}
+.navbar ul li .active {
+    color: var(--bs-orange) !important;
+}
+@keyframes slideInLeft {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+@media (max-width: 500px) {
+    .navbar .navbar-brand label:first-child {
+        font-size: 16px;
+    }
+    .navbar .navbar-brand label:nth-child(2) {
+        font-size: 12px !important;
+    }
+}
+/* End Navbar */
+
+/* Hero */
+#hero {
+    width: 100%;
+    height: 100vh;
+    background: url("../img/hero-bg.png");
+    background-size: cover;
+    position: relative;
+}
+
+/* End Hero */
