--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,7 +135,7 @@ body {
     background-color: #f6f7ff;
     min-height: 100vh;
 }
-#pemerintahan .row div:first-child h3 {
+#pemerintahan .row h3 {
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -158,7 +158,7 @@ body {
 #pemerintahan .shadow {
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08) !important;
 }
-#pemerintahan .bpd {
+#pemerintahan .card {
     background-image: linear-gradient(
         to right,
         #292c3f,
@@ -166,35 +166,80 @@ body {
         #2b5876,
         #4e4376
     );
-    height: 100%;
-    height: 100%;
     width: 100%;
     background-size: 300% 100%;
-    moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -webkit-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
     cursor: pointer;
+    color: #f6f7ff;
+    height: 49%;
 }
-#pemerintahan .bpd:hover {
+#pemerintahan .card h3 {
+    font-size: 25px;
+}
+#pemerintahan .card:hover {
     background-position: 100% 0;
     moz-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
-#pemerintahan .bpd h3 {
-    color: #f6f7ff;
-}
 #pemerintahan .bi-people-fill {
-    font-size: 100px;
+    font-size: 50px;
     color: #f6f7ff;
 }
-@media (max-width: 991px) {
+@media (max-width: 992px) {
     #pemerintahan .bi-people-fill {
         font-size: 52px;
     }
-    #pemerintahan .bpd h3 {
+    #pemerintahan .card h3 {
         font-size: 15px;
+    }
+    #pemerintahan .row > .col-lg-6:nth-child(2) {
+        margin-top: 0.5rem;
+    }
+}
+
+/* ---------------------------------End Pemerintahan---------------------------------------- */
+
+/* /* ------------------------------Card Flow----------------------------------------------- */
+.card-fluid {
+    background: #0d0d0d6b;
+    position: fixed;
+    z-index: 999;
+    padding: 60px;
+    display: none;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+}
+.card-flow {
+    background: white;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    padding: 15px;
+    display: block;
+}
+.card-content {
+    overflow: scroll;
+    height: 93%;
+    display: block;
+}
+.card-flow h4 {
+    margin: 0px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+@media (max-width: 992px) {
+    .card-fluid {
+        padding: 15px;
+    }
+}
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
