--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ body {
 .navbar {
     position: fixed;
     width: 100%;
-    z-index: 999;
+    z-index: 10;
 }
 .navbar .dropdown-item:active {
     background-color: #fff !important;
@@ -204,7 +204,7 @@ body {
 .card-fluid {
     background: #0d0d0d6b;
     position: fixed;
-    z-index: 999;
+    z-index: 15;
     padding: 60px;
     display: none;
     top: 0px;
@@ -222,17 +222,30 @@ body {
 }
 .card-content {
     overflow: scroll;
-    height: 93%;
+    overflow-x: hidden;
+    height: 90%;
     display: block;
 }
 .card-flow h4 {
     margin: 0px;
+    font-size: 15px;
     font-weight: bold;
     text-transform: uppercase;
+}
+.card-content label {
+    text-align: justify;
+}
+.img-card {
+    max-width: 400px;
+    height: 300px;
+    cursor: pointer;
 }
 @media (max-width: 992px) {
     .card-fluid {
         padding: 15px;
+    }
+    .img-card {
+        margin: 0px auto;
     }
 }
 @keyframes fade-in {
@@ -242,4 +255,26 @@ body {
     to {
         opacity: 1;
     }
+}
+
+/* ------------------------------imgZoom----------------------------------------------- */
+#contImg i:active {
+    /* font-size: calc(1.3rem + 0.6vw) !important; */
+    color: white !important;
+}
+.img-card-preview {
+    cursor: default !important;
+    transition: all 0.5s ease-in-out;
+    position: fixed !important;
+    max-width: 100% !important;
+    background-repeat: no-repeat !important;
+    width: 100% !important;
+    top: 0 !important;
+    right: 0 !important;
+    left: 0 !important;
+    bottom: 0 !important;
+    height: 100vh !important;
+    z-index: 20 !important;
+    background-color: #00000091 !important;
+    background-position-y: center !important;
 }
